--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,7 @@
         <div class="col-md-5">
             <div class="card">
                 <div class="card-body">
-                    <form action="">
+                    <form action="/add" method="POST">
                         <div class="form-group">
                             <input type="text" name="titulo" placeholder="Inserte un título" class="form-control">
                         </div>
