--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -1,19 +1,26 @@
+<% include partials/_header %>
 
-        <div class="col-md-5">
-                <div class="card">
-                    <div class="card-body">
-                        <form action="/add" method="POST">
-                            <div class="form-group">
-                                <input type="text" name="titulo" placeholder="Inserte un título" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <textarea name="descripcion" cols="80" class="form-control" placeholder="Inserte una descripción"></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary btn-block">
-                                Agregar
-                            </button>
-                        </form>
-    
-                    </div>
+<div class="countainer">
+    <div class="row">
+        <div class="col-md-5 offset-md-3">
+            <div class="card">
+                <div class="card-body">
+                    <form action="/actualizar/<%= tarea._id %>" method="POST">
+                        <div class="form-group">
+                            <input type="text" name="titulo" placeholder="Inserte un título" class="form-control" value="<%= tarea.titulo%>">
+                        </div>
+                        <div class="form-group">
+                            <textarea name="descripcion" cols="80" class="form-control" placeholder="Inserte una descripción"><%= tarea.descripcion %></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">
+                            Actualizar
+                        </button>
+                    </form>
+
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+
+<% include partials/_footer %>
